Package_Tools/include_C/SDL_surface.h

#define SDL_SURFACE_PREALLOCATED    0x00000001u 
#define SDL_SURFACE_LOCK_NEEDED     0x00000002u 
#define SDL_SURFACE_LOCKED          0x00000004u 
#define SDL_SURFACE_SIMD_ALIGNED    0x00000008u 
#define SDL_MUSTLOCK(S) ((((S)->flags & SDL_SURFACE_LOCK_NEEDED)) == SDL_SURFACE_LOCK_NEEDED)
typedef enum SDL_ScaleMode
{
    SDL_SCALEMODE_NEAREST, 
    SDL_SCALEMODE_LINEAR   
} SDL_ScaleMode;
typedef enum SDL_FlipMode
{
    SDL_FLIP_NONE,          
    SDL_FLIP_HORIZONTAL,    
    SDL_FLIP_VERTICAL       
} SDL_FlipMode;
struct SDL_Surface
{
    SDL_SurfaceFlags flags;     
    SDL_PixelFormat format;     
    int w;                      
    int h;                      
    int pitch;                  
    void *pixels;               
    int refcount;               
    void *reserved;             
};
typedef struct SDL_Surface SDL_Surface;
extern  SDL_Surface *  SDL_CreateSurface(int width, int height, SDL_PixelFormat format);
extern  SDL_Surface *  SDL_CreateSurfaceFrom(int width, int height, SDL_PixelFormat format, void *pixels, int pitch);
extern  void  SDL_DestroySurface(SDL_Surface *surface);
extern  SDL_PropertiesID  SDL_GetSurfaceProperties(SDL_Surface *surface);
#define SDL_PROP_SURFACE_SDR_WHITE_POINT_FLOAT              "SDL.surface.SDR_white_point"
#define SDL_PROP_SURFACE_HDR_HEADROOM_FLOAT                 "SDL.surface.HDR_headroom"
#define SDL_PROP_SURFACE_TONEMAP_OPERATOR_STRING            "SDL.surface.tonemap"
extern  bool  SDL_SetSurfaceColorspace(SDL_Surface *surface, SDL_Colorspace colorspace);
extern  SDL_Colorspace  SDL_GetSurfaceColorspace(SDL_Surface *surface);
extern  SDL_Palette *  SDL_CreateSurfacePalette(SDL_Surface *surface);
extern  bool  SDL_SetSurfacePalette(SDL_Surface *surface, SDL_Palette *palette);
extern  SDL_Palette *  SDL_GetSurfacePalette(SDL_Surface *surface);
extern  bool  SDL_AddSurfaceAlternateImage(SDL_Surface *surface, SDL_Surface *image);
extern  bool  SDL_SurfaceHasAlternateImages(SDL_Surface *surface);
extern  SDL_Surface **  SDL_GetSurfaceImages(SDL_Surface *surface, int *count);
extern  void  SDL_RemoveSurfaceAlternateImages(SDL_Surface *surface);
extern  bool  SDL_LockSurface(SDL_Surface *surface);
extern  void  SDL_UnlockSurface(SDL_Surface *surface);
extern  SDL_Surface *  SDL_LoadBMP_IO(SDL_IOStream *src, bool closeio);
extern  SDL_Surface *  SDL_LoadBMP(const char *file);
extern  bool  SDL_SaveBMP_IO(SDL_Surface *surface, SDL_IOStream *dst, bool closeio);
extern  bool  SDL_SaveBMP(SDL_Surface *surface, const char *file);
extern  bool  SDL_SetSurfaceRLE(SDL_Surface *surface, bool enabled);
extern  bool  SDL_SurfaceHasRLE(SDL_Surface *surface);
extern  bool  SDL_SetSurfaceColorKey(SDL_Surface *surface, bool enabled, Uint32 key);
extern  bool  SDL_SurfaceHasColorKey(SDL_Surface *surface);
extern  bool  SDL_GetSurfaceColorKey(SDL_Surface *surface, Uint32 *key);
extern  bool  SDL_SetSurfaceColorMod(SDL_Surface *surface, Uint8 r, Uint8 g, Uint8 b);
extern  bool  SDL_GetSurfaceColorMod(SDL_Surface *surface, Uint8 *r, Uint8 *g, Uint8 *b);
extern  bool  SDL_SetSurfaceAlphaMod(SDL_Surface *surface, Uint8 alpha);
extern  bool  SDL_GetSurfaceAlphaMod(SDL_Surface *surface, Uint8 *alpha);
extern  bool  SDL_SetSurfaceBlendMode(SDL_Surface *surface, SDL_BlendMode blendMode);
extern  bool  SDL_GetSurfaceBlendMode(SDL_Surface *surface, SDL_BlendMode *blendMode);
extern  bool  SDL_SetSurfaceClipRect(SDL_Surface *surface, const SDL_Rect *rect);
extern  bool  SDL_GetSurfaceClipRect(SDL_Surface *surface, SDL_Rect *rect);
extern  bool  SDL_FlipSurface(SDL_Surface *surface, SDL_FlipMode flip);
extern  SDL_Surface *  SDL_DuplicateSurface(SDL_Surface *surface);
extern  SDL_Surface *  SDL_ScaleSurface(SDL_Surface *surface, int width, int height, SDL_ScaleMode scaleMode);
extern  SDL_Surface *  SDL_ConvertSurface(SDL_Surface *surface, SDL_PixelFormat format);
extern  SDL_Surface *  SDL_ConvertSurfaceAndColorspace(SDL_Surface *surface, SDL_PixelFormat format, SDL_Palette *palette, SDL_Colorspace colorspace, SDL_PropertiesID props);
extern  bool  SDL_ConvertPixels(int width, int height, SDL_PixelFormat src_format, const void *src, int src_pitch, SDL_PixelFormat dst_format, void *dst, int dst_pitch);
extern  bool  SDL_ConvertPixelsAndColorspace(int width, int height, SDL_PixelFormat src_format, SDL_Colorspace src_colorspace, SDL_PropertiesID src_properties, const void *src, int src_pitch, SDL_PixelFormat dst_format, SDL_Colorspace dst_colorspace, SDL_PropertiesID dst_properties, void *dst, int dst_pitch);
extern  bool  SDL_PremultiplyAlpha(int width, int height, SDL_PixelFormat src_format, const void *src, int src_pitch, SDL_PixelFormat dst_format, void *dst, int dst_pitch, bool linear);
extern  bool  SDL_PremultiplySurfaceAlpha(SDL_Surface *surface, bool linear);
extern  bool  SDL_ClearSurface(SDL_Surface *surface, float r, float g, float b, float a);
extern  bool  SDL_FillSurfaceRect(SDL_Surface *dst, const SDL_Rect *rect, Uint32 color);
extern  bool  SDL_FillSurfaceRects(SDL_Surface *dst, const SDL_Rect *rects, int count, Uint32 color);
extern  bool  SDL_BlitSurface(SDL_Surface *src, const SDL_Rect *srcrect, SDL_Surface *dst, const SDL_Rect *dstrect);
extern  bool  SDL_BlitSurfaceUnchecked(SDL_Surface *src, const SDL_Rect *srcrect, SDL_Surface *dst, const SDL_Rect *dstrect);
extern  bool  SDL_BlitSurfaceScaled(SDL_Surface *src, const SDL_Rect *srcrect, SDL_Surface *dst, const SDL_Rect *dstrect, SDL_ScaleMode scaleMode);
extern  bool  SDL_BlitSurfaceUncheckedScaled(SDL_Surface *src, const SDL_Rect *srcrect, SDL_Surface *dst, const SDL_Rect *dstrect, SDL_ScaleMode scaleMode);
extern  bool  SDL_BlitSurfaceTiled(SDL_Surface *src, const SDL_Rect *srcrect, SDL_Surface *dst, const SDL_Rect *dstrect);
extern  bool  SDL_BlitSurfaceTiledWithScale(SDL_Surface *src, const SDL_Rect *srcrect, float scale, SDL_ScaleMode scaleMode, SDL_Surface *dst, const SDL_Rect *dstrect);
extern  bool  SDL_BlitSurface9Grid(SDL_Surface *src, const SDL_Rect *srcrect, int left_width, int right_width, int top_height, int bottom_height, float scale, SDL_ScaleMode scaleMode, SDL_Surface *dst, const SDL_Rect *dstrect);
extern  Uint32  SDL_MapSurfaceRGB(SDL_Surface *surface, Uint8 r, Uint8 g, Uint8 b);
extern  Uint32  SDL_MapSurfaceRGBA(SDL_Surface *surface, Uint8 r, Uint8 g, Uint8 b, Uint8 a);
extern  bool  SDL_ReadSurfacePixel(SDL_Surface *surface, int x, int y, Uint8 *r, Uint8 *g, Uint8 *b, Uint8 *a);
extern  bool  SDL_ReadSurfacePixelFloat(SDL_Surface *surface, int x, int y, float *r, float *g, float *b, float *a);
extern  bool  SDL_WriteSurfacePixel(SDL_Surface *surface, int x, int y, Uint8 r, Uint8 g, Uint8 b, Uint8 a);
extern  bool  SDL_WriteSurfacePixelFloat(SDL_Surface *surface, int x, int y, float r, float g, float b, float a);